Created TotalCapitalCost and TotalVariableCost Variables and Constraints.
Created csvs of TotalCapitalCost, TotalVaribaleCost and TotalStrogaeCost

--- a/2. Code/Model.ipynb
+++ b/2. Code/Model.ipynb
@@ -198,7 +198,9 @@
     "EM.TotalStorageCost = pyo.Var(EM.Storage, domain=pyo.NonNegativeReals)\n",
     "EM.TotalCapacity = pyo.Var(EM.Technology, domain=pyo.NonNegativeReals)\n",
     "EM.TotalStorageCapacity = pyo.Var(EM.Storage, EM.Fuel, domain=pyo.NonNegativeReals)\n",
-    "#EM.Shortage = pyo.Var(EM.Hour, EM.Fuel, domain=pyo.NonNegativeReals)\n"
+    "#EM.Shortage = pyo.Var(EM.Hour, EM.Fuel, domain=pyo.NonNegativeReals)\n",
+    "EM.TotalCapitalCost = pyo.Var(EM.Technology, domain=pyo.NonNegativeReals)\n",
+    "EM.TotalVariableCost =pyo.Var(EM.Hour, EM.Technology, domain=pyo.NonNegativeReals)"
    ]
   },
   {
@@ -258,7 +260,13 @@
     "    return EM.TotalCapacity[t] == EM.ResidualCapacity[t] + EM.Capacity[t]\n",
     "        \n",
     "def productioncost(EM,t): \n",
-    "    return sum(EM.FuelProductionByTechnology[h,t,f] for f in EM.Fuel for h in EM.Hour) * EM.VariableCost[t] + EM.Capacity[t] * EM.CapitalCost[t] == EM.TotalCost[t]\n",
+    "    return sum(EM.FuelProductionByTechnology[h,t,f] for f in EM.Fuel for h in EM.Hour) * EM.VariableCost[t] + EM.TotalCapitalCost[t] == EM.TotalCost[t]\n",
+    "\n",
+    "def totalcapitalcostfunction(EM,t):\n",
+    "    return EM.Capacity[t] * EM.CapitalCost[t] == EM.TotalCapitalCost[t]\n",
+    "\n",
+    "def totalvariablecostfunction(EM,h,t):\n",
+    "    return sum(EM.FuelProductionByTechnology[h,t,f] for f in EM.Fuel) * EM.VariableCost[t] == EM.TotalVariableCost[h,t]\n",
     "\n",
     "def productionfunction_dispatchable(EM,h,t,f):\n",
     "    if EM.TagDispatchableTechnology[t] > 0:\n",
@@ -355,7 +363,9 @@
     "EM.TotalCapacityFunction = pyo.Constraint(EM.Technology, rule=totalcapacity)\n",
     "EM.TotalCapacityStorageFunction = pyo.Constraint(EM.Storage, EM.Fuel, rule=totalstoragecapacity)\n",
     "EM.GridCapacityFunction = pyo.Constraint(EM.Hour, rule=gridcapacity)\n",
-    "#EM.BatterySOCFunction = pyo.Constraint(EM.Storage, EM.Hour, EM.Fuel, rule=batterySOCfunction)\n"
+    "#EM.BatterySOCFunction = pyo.Constraint(EM.Storage, EM.Hour, EM.Fuel, rule=batterySOCfunction)\n",
+    "EM.TotalCapitalCostFunction = pyo.Constraint(EM.Technology, rule=totalcapitalcostfunction)\n",
+    "EM.TotalVariableCostFunction = pyo.Constraint(EM.Hour, EM.Technology, rule=totalvariablecostfunction)\n"
    ]
   },
   {
@@ -451,6 +461,9 @@
     "TotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\n",
     "TotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\n",
     "GenerationCapacity = TotalCapacity.iloc[0:5,:]\n",
+    "TotalCapitalCost = pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\n",
+    "TotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\n",
+    "TotalStorageCost = pd.DataFrame(instance.TotalStorageCost.extract_values().values(), index=(instance.TotalStorageCost.extract_values().keys()), columns=['Value']).rename_axis('Storage').reset_index()\n",
     "\n",
     "#let's add outputs for our storage flows\n",
     "StorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\n",
@@ -476,6 +489,9 @@
     "StorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\n",
     "TotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\n",
     "GenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\n",
+    "TotalCapitalCost.to_csv('../3. Output/TotalCapitalCost.csv', index=False)\n",
+    "TotalVariableCost.to_csv('../3. Output/TotalVariableCost.csv', index=False)\n",
+    "TotalStorageCost.to_csv('../3. Output/TotalStorageCost.csv', index=False)\n",
     "\n",
     "#print(TotalCapacity)\n",
     "#print(TotalStorageCapacity)\n",
