Changed the emission limits and added min feasible capacity

--- a/Future Scenario CSVs/2. Code/Model.ipynb
+++ b/Future Scenario CSVs/2. Code/Model.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,6 +142,7 @@
     "readin_taggridtechnology = pd.read_csv('../1. Input/taggridtechnology.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_annualemissionlimit = pd.read_csv('../1. Input/annualemissionlimit.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_technologylifetime = pd.read_csv('../1. Input/technologylifetime.csv', index_col=[0], sep=',').squeeze('columns')\n",
+    "readin_technologymincapacity = pd.read_csv('../1. Input/technologymincapacity.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "\n",
     "#Creating parameters\n",
     "EM.VariableCost = pyo.Param(EM.Technology, default=0, initialize=readin_variablecost)\n",
@@ -167,12 +168,13 @@
     "EM.TechnologyLifetime = pyo.Param(EM.Technology, default=20, initialize=readin_technologylifetime)\n",
     "EM.ModelPeriodEmissionLimit = pyo.Param(initialize=9999999999)\n",
     "EM.DiscountRate = pyo.Param(initialize = 0.05)\n",
-    "EM.YearlyDifferenceMultiplier = pyo.Param(EM.Year, initialize=YearlyDifferenceMultiplier)\n"
+    "EM.YearlyDifferenceMultiplier = pyo.Param(EM.Year, initialize=YearlyDifferenceMultiplier)\n",
+    "EM.TechnologyMinCapacity = pyo.Param(EM.Technology, initialize=readin_technologymincapacity)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,6 +232,7 @@
     "EM.TotalVariableCost =pyo.Var(EM.Year, EM.Hour, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "EM.ModelPeriodEmissions = pyo.Var(domain= pyo.NonNegativeReals)\n",
     "EM.SalvageValue = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
+    "EM.CapacityUnits = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "\n",
     "#Adding Infeasibility variable (this is similar to having shortage - helps in debugging)\n",
     "#EM.InfeasibleGeneration = pyo.Var(EM.Year,EM.Hour,EM.Fuel, domain=pyo.NonNegativeReals)"
@@ -244,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,6 +291,9 @@
     "def gridcapacity(EM,y,h):\n",
     "    return (sum(EM.FuelProductionByTechnology[y,h,t,f] for t in EM.Technology for f in EM.Fuel if EM.TagGridTechnology[t] == 1) \n",
     "            + sum(EM.StorageDisCharge[y,h,s,f] for s in EM.Storage for f in EM.Fuel if EM.StorageDisChargeEfficiency[s,f]>0)) <= EM.GridCapacity\n",
+    "\n",
+    "def capacityunitfunction(EM,y,t):\n",
+    "    return EM.NewCapacity[y,t] == EM.TechnologyMinCapacity[t] * EM.CapacityUnits[y,t]\n",
     "\n",
     "#def totalcapacity(EM,y,t):\n",
     "    return EM.TotalCapacity[y,t] == EM.ResidualCapacity[t] + EM.NewCapacity[y,t]\n",
@@ -460,6 +466,8 @@
     "\n",
     "EM.SalvageValueAccountingEndOfLife = pyo.Constraint(EM.Year,EM.Technology,rule=salvagevalue_endoflife)\n",
     "EM.SalvageValueAccountingDuringLife = pyo.Constraint(EM.Year,EM.Technology,rule=salvagevalue_duringlife)\n",
+    "\n",
+    "EM.CapacityUnitFunction = pyo.Constraint(EM.Year, EM.Technology, rule=capacityunitfunction)\n",
     "\n"
    ]
   },
@@ -472,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,16 +497,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Problem': [{'Name': 'x6657959', 'Lower bound': 748918.5051543821, 'Upper bound': 748918.5051543821, 'Number of objectives': 1, 'Number of constraints': 4870836, 'Number of variables': 4730719, 'Number of binary variables': 0, 'Number of integer variables': 0, 'Number of continuous variables': 4730719, 'Number of nonzeros': 14093176, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '288.42400002479553', 'Error rc': 0, 'Time': 329.6833322048187}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+       "{'Problem': [{'Name': 'x6657959', 'Lower bound': 766844.7435260587, 'Upper bound': 766844.7435260587, 'Number of objectives': 1, 'Number of constraints': 4870836, 'Number of variables': 4730719, 'Number of binary variables': 0, 'Number of integer variables': 0, 'Number of continuous variables': 4730719, 'Number of nonzeros': 14093176, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '198.07099986076355', 'Error rc': 0, 'Time': 238.4917757511139}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,15 +545,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17632.24233911997\n",
-      "1373835.1991765816\n"
+      "9755.756981746326\n",
+      "1167556.7713548872\n"
      ]
     }
    ],
@@ -565,6 +573,11 @@
     "Use = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Year','Hour','Technology','Fuel')), columns=['Value']).reset_index()\n",
     "Curtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Year','Hour','Fuel')), columns=['Value']).reset_index()\n",
     "StorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Year','Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\n",
+    "NewStorageEnergyCapacity = pd.DataFrame(instance.NewStorageEnergyCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.NewStorageEnergyCapacity.extract_values().keys(), names=('Year','Storage', 'Fuel')), columns=['Value']).reset_index()\n",
+    "NewStorageEnergyCapacity['Type'] = 'NewCapacity'\n",
+    "TotalStorageCapacity = pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Year','Storage','Fuel')), columns=['Value']).reset_index()\n",
+    "TotalStorageCapacity['Type'] = 'TotalCapacity'\n",
+    "\n",
     "\n",
     "#let's add outputs for our storage flows\n",
     "StorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Year','Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\n",
@@ -589,6 +602,11 @@
     "Capacity = pd.concat([Capacity,NewCapacity], ignore_index=True)\n",
     "Capacity = pd.concat([Capacity,TotalCapacity], ignore_index=True)\n",
     "\n",
+    "# since we now have multiple capacity outputs, we have to do the same for capacities\n",
+    "StorageCapacity = pd.DataFrame(columns=['Year', 'Storage','Fuel','Type', 'Value'])\n",
+    "StorageCapacity = pd.concat([StorageCapacity,NewStorageEnergyCapacity], ignore_index=True)\n",
+    "StorageCapacity = pd.concat([StorageCapacity,TotalStorageCapacity], ignore_index=True)\n",
+    "\n",
     "# now, information on emissions would also be interesting\n",
     "AnnualTechnologyEmissions = pd.DataFrame(instance.AnnualTechnologyEmissions.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.AnnualTechnologyEmissions.extract_values().keys(), names=('Year','Technology')), columns=['Value']).reset_index() \n",
     "\n",
@@ -597,6 +615,8 @@
     "Capacity.to_csv('../3. Output/Capacity.csv',index=False)\n",
     "StorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\n",
     "AnnualTechnologyEmissions.to_csv('../3. Output/Emissions.csv',index=False)\n",
+    "Curtailment.to_csv('../3. Output/Curtailment.csv',index=False)\n",
+    "StorageCapacity.to_csv('../3. Output/StorageCapacity.csv', index=False)\n",
     "\n",
     "print(sum(instance.AnnualTechnologyEmissions.extract_values().values()))\n",
     "print(sum(instance.Curtailment.extract_values().values()))\n"
@@ -604,10 +624,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n#ProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\n#Capacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\n#Demand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\\n#Use = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\n#Curtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\\n#StorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\\n#TotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\\nGenerationCapacity = TotalCapacity.iloc[0:5,:]\\nTotalCapitalCost = (pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()).iloc[0:5,:]\\nTotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\\nTotalStorageCost = pd.DataFrame(instance.TotalStorageCost.extract_values().values(), index=(instance.TotalStorageCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalProjectCapital = pd.concat([TotalCapitalCost, TotalStorageCost], ignore_index=True)\\nTechnologyEmissions = pd.DataFrame(instance.TechnologyEmissions.extract_values().values(), index=(instance.TechnologyEmissions.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\n\\n#let's add outputs for our storage flows\\n#StorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\\n#StorageDisCharge = (pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0))\\n\\n# make sure that the values for Curtailment and Use are negative for our outputs\\nUse['Value']= Use['Value']*-1\\nCurtailment['Value']= Curtailment['Value']*-1\\nStorageCharge['Value']= StorageCharge['Value']*-1\\n\\n# combine all values for Production, Use, Demand, and Curtailment into one data frame\\nEnergyBalance = pd.concat([ProductionByTechnology,Use], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,Demand], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Demand')\\nEnergyBalance = pd.concat([EnergyBalance,Curtailment], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Curtailment')\\nEnergyBalance = pd.concat([EnergyBalance,StorageCharge], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,StorageDisCharge], ignore_index=True)\\n\\n# write our output values to csv files in the output subfolder\\nEnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\\nCapacity.to_csv('../3. Output/Capacity.csv',index=False)\\nStorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\\nTotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\\nGenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\\nTotalProjectCapital.to_csv('../3. Output/TotalProjectCapital.csv', index=False)\\nTotalVariableCost.to_csv('../3. Output/TotalVariableCost.csv', index=False)\\nTechnologyEmissions.to_csv('../3. Output/TechnologyEmissions.csv', index=False)\\n\\n#print(TotalCapacity)\\n#print(TotalStorageCapacity)\\n#print(GenerationCapacity)\\n#print(TotalCapitalCost)\\n#print(TotalProjectCapital)\\nprint(TechnologyEmissions)\\n\\n\""
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "'''\n",
     "#ProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\n",
     "#Capacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\n",
     "#Demand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\n",
@@ -656,23 +688,9 @@
     "#print(GenerationCapacity)\n",
     "#print(TotalCapitalCost)\n",
     "#print(TotalProjectCapital)\n",
-    "print(TechnologyEmissions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#seeing the emissions per technology\n",
-    "TechnologyEmissions = pd.DataFrame(instance.TechnologyEmissions.extract_values().values(), \n",
-    "                                   index=pd.Index(instance.TechnologyEmissions.extract_values().keys(), name='Technology'), \n",
-    "                                   columns=['Value']).reset_index()\n",
+    "print(TechnologyEmissions)\n",
     "\n",
-    "TechnologyEmissions.plot(kind='bar', x='Technology', y='Value', title='Emissions by Technology')\n",
-    "plt.ylabel('Emissions')\n",
-    "plt.show()"
+    "'''"
    ]
   },
   {
@@ -686,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
